[gd_scene load_steps=4 format=3 uid="uid://boyfws3lkscvi"]

[ext_resource type="Script" path="res://scripts/menu/ui.gd" id="1_ghejl"]
[ext_resource type="Script" path="res://scripts/menu/main.gd" id="2_2oujh"]
[ext_resource type="Script" path="res://scripts/menu/multiplayer.gd" id="3_1abx8"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 97.0
offset_bottom = 136.0
script = ExtResource("1_ghejl")

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 97.0
offset_bottom = 136.0
script = ExtResource("2_2oujh")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="NewGame" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="Multiplayer" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="MultiplayerMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 277.0
offset_bottom = 34.0
script = ExtResource("3_1abx8")

[node name="Net" type="VBoxContainer" parent="MultiplayerMenu"]
layout_mode = 2

[node name="Options" type="HBoxContainer" parent="MultiplayerMenu/Net"]
layout_mode = 2

[node name="Label" type="Label" parent="MultiplayerMenu/Net/Options"]
layout_mode = 2
text = "Direct:"

[node name="Host" type="Button" parent="MultiplayerMenu/Net/Options"]
layout_mode = 2
text = "Host"

[node name="Connect" type="Button" parent="MultiplayerMenu/Net/Options"]
layout_mode = 2
text = "Connect"

[node name="Remote" type="LineEdit" parent="MultiplayerMenu/Net/Options"]
layout_mode = 2
text = "127.0.0.1"
expand_to_text_length = true

[node name="Port" type="LineEdit" parent="MultiplayerMenu/Net/Options"]
layout_mode = 2
text = "25565"
expand_to_text_length = true

[connection signal="pressed" from="MainMenu/VBoxContainer/NewGame" to="MainMenu" method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Multiplayer" to="MainMenu" method="_on_multiplayer_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Net/Options/Host" to="MultiplayerMenu" method="_on_host_pressed"]
[connection signal="pressed" from="MultiplayerMenu/Net/Options/Connect" to="MultiplayerMenu" method="_on_connect_pressed"]
